app/assets/stylesheets/shared/pure-overrides.css.scss
@import 'constants';
@import 'utilities';

// This is no longer valid and will need to be changed to be hardware accelerated in the future.
//.subnav {
//  @include transition();
//
//  padding-top: 70px;
//  z-index: 1003;
//  left: $nav-width-desktops;
//  background: #212020;
//
//  .pure-menu ul {
//    // Hack to get menu elements to line up correctly with .nav
//    border-top: 1px solid rgba(0, 0, 0, 0);
//  }
//
//  &.active {
//    left: 2*$nav-width-desktops;
//  }
//
//  @include respond-to(handhelds) {
//    left: 0;
//    &.nav-active {
//      left: $nav-width-handhelds;
//    }
//    &.active {
//      left: 2*$nav-width-handhelds;
//    }
//  }
//  @include respond-to(tablets) {
//    left: 0;
//    &.nav-active {
//      left: $nav-width-tablets;
//    }
//    &.active {
//      left: 2*$nav-width-tablets;
//    }
//  }
//}

.nav {
  @include transition();

  left: 0;

  padding-top: $body-margin;
  z-index: 1004;
  @include transform($nav-width-desktops, 0);
  background: #191818;

  .pure-menu ul {
    border-top: 1px solid #333;
  }

  @include respond-to(handhelds) {
    @include transform(0, 0);
    &.active {
      @include transform($nav-width-handhelds, 0);
    }
  }

  @include respond-to(tablets) {
    @include transform(0, 0);
    &.active {
      @include transform($nav-width-tablets, 0);
    }
  }
}

.nav, .subnav {
  margin-left: -$nav-width-desktops;
  width: $nav-width-desktops;

  @include respond-to(handhelds) { width: $nav-width-handhelds; margin-left: -$nav-width-handhelds; }
  @include respond-to(tablets) { width: $nav-width-tablets; margin-left: -$nav-width-tablets; }
  @include respond-to(desktops) { width: $nav-width-desktops; margin-left: -$nav-width-desktops }

  position: fixed;
  top: 0;
  bottom: 0;
  overflow-y: auto;
  -webkit-overflow-scroll: touch;

  .pure-menu {
    ul {
      li {
        font-size: 100%;
        @include respond-to(tablets) { font-size: 125%; }

        a:hover {
          background-color: #333;
        }

        &.menu-item-divided {
          border-top: 1px solid #333;
        }

        &.pure-menu-selected, &.pure-menu-selected a:hover {
          background: #1f8dd6;
          a {
            color: #fff;
          }
        }

        i {
          float: right;
          margin-right: 0.6em;
          line-height: inherit;
        }
      }
    }
  }

  .pure-menu-open {
    background: transparent;
    border: 0;

    .pure-menu-heading {
      font-size: 125%;
      @include respond-to(tablets) { font-size: 140%; }

      color: #fff;
      text-transform: none;
      padding: 0 0 0 0.43em;
      margin: 0;
      line-height: 50px;
      height: 50px;
    }
      color: #999;

    a {
      border: none;
      white-space: normal;
      padding: 0.6em 0 0.6em 0.6em;
    }
  }
}

.pure-form-aligned {
  $label-width: 10em;
  $label-margin: 1em;
  $dropdown-width: 10em;
  // XXX: Where does this come from? Oh well.
  $label-comfort-margin: 1em;
  $dropdown-comfort-margin: 0.6em;
  // TODO: This is bad and we should look into it.
  $dropdown-comfort-antimargin-lowres: 0.2em;

  .pure-form-fields {
    display: table;
    width: 100%;
    border-spacing: 3px;
    @include respond-to(handhelds) { border-spacing: 0 3px; }

    .pure-control-group {
      display: table-row;

      * {
        margin: 3px;
      }

      label {
        padding-right: 10px;
        display: table-cell;
        @include respond-to(handhelds) { display: table-row; }
      }

      input[type="text"], input[type="email"], input[type="password"] {
        display: table-cell;
        width: 100%;
        @include respond-to(handhelds) { display: table-row; }
      }

      input[readonly], textarea[readonly], select[readonly] {
        border: 1px solid #ccc;
        background-color: white;
        color: black;
      }

      // Text areas do not get formatted by pure, the styling below is
      // obtained from the styling pure uses for text inputs.
      textarea {
        // Custom styles.
        resize: none;
        padding: 0.5em;
        width: 100%;
        display: table-cell;

        border: 1px solid #ccc;
        font-size: 0.8em;
        box-shadow: inset 0 1px 3px #ddd;
        border-radius: 4px;
        -webkit-transition: .3s linear border;
        transition: .3s linear border;
        box-sizing: border-box;
        -webkit-font-smoothing: antialiased;
      }
    }
  }

  .dropdown-list {
    min-width: $dropdown-width;
    margin: 4.5px 0;
    display: table-cell;

    &.other-dropdown {
      width: $dropdown-width;
    }
  }

  .dropdown-field {
    display: table;
    margin: 0px !important;
    border-spacing: 0px;
    width: 100%;
    @include respond-to(handhelds) { display: table-row; }

    .other-field {
      display: table-cell;
      margin-left: $label-comfort-margin;
      width: 100%;
    }
  }

  .checkbox-container {
    display: inline-block;

    .checkbox-field {
      display: inline-block;
      margin: 0px 4px;

      .checkbox-label {
        margin: 0px 2px 0px 4px;
      }
    }
  }
}

body {
  .pure-button-xsmall {
    font-size: 70%;
  }

  .pure-button-small {
    font-size: 85%;
  }

  .pure-button-large {
    font-size: 110%;
  }

  .pure-button-xlarge {
    font-size: 125%;
  }

  .pure-button-2x {
    font-size: 200%;
  }

  .pure-button-fixed-width {
    width: 300px;
  }

  .pure-button-success,
  .pure-button-error,
  .pure-button-warning,
  .pure-button-secondary {
      color: white;
      border-radius: 4px;
      text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
  }

  .pure-button-success {
      background: rgb(76, 201, 71); /* this is a green */
  }

  .pure-button-error {
      background: rgb(202, 60, 60); /* this is a maroon */
  }

  .pure-button-warning {
      background: orange;
  }

  .pure-button-secondary {
      background: rgb(95, 198, 218); /* this is a light blue */
  }

  h3 {
    @include respond-to(handhelds) {
      margin-bottom: 0.7em;
    }
  }
}

.pure-table-full-width {
  width: 100%;
}

